force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Support tickets used for internal requests.</description>
    <label>Ticket</label>
    <nameField>
        <displayFormat>Ticket #{0}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>