force-app/main/default/objects/Ticket__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula
  >IF(ISPICKVAL(  Phase__c , &quot;Closed - Completed&quot;)=TRUE,  Date_Closed__c -DATEVALUE(CreatedDate), TODAY()-DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>