force-app/main/default/objects/Ticket__c/fields/Agency_Function__c.field-meta.xml
<CustomField>
    <fullName>Agency_Function__c</fullName>
    <label>Agency Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Elected Official/Legislative</fullName>
            </value>
            <value>
                <fullName>02 - Finance/Taxation/Budgeting</fullName>
            </value>
            <value>
                <fullName
        >03 - Information Technology/Telecommunications</fullName>
                <label>03 - Information Technology/Telecommunications</label>
            </value>
            <value>
                <fullName
        >04 - Public Works/Transportation/Infrastructure/Utility/Planning</fullName>
                <label
        >04 - Public Works/Transportation/Infrastructure/Utility/Planning</label>
            </value>
            <value>
                <fullName>05 - Health/Human Services</fullName>
            </value>
            <value>
                <fullName>06 - Human Resources/Benefits/Personnel</fullName>
            </value>
            <value>
                <fullName>07 - Environment/Energy</fullName>
            </value>
            <value>
                <fullName
        >08 - Administration/Operations/General Services/Purchasing</fullName>
                <label
        >08 - Administration/Operations/General Services/Purchasing</label>
            </value>
            <value>
                <fullName
        >09 - Economic Development/Workforce Development</fullName>
                <label>09 - Economic Development/Workforce Development</label>
            </value>
            <value>
                <fullName
        >10 - Agriculture/Parks &amp; Rec/Land Management</fullName>
                <label>10 - Agriculture/Parks &amp; Rec/Land Management</label>
            </value>
            <value>
                <fullName>11 - Courts/Corrections/Justice</fullName>
            </value>
            <value>
                <fullName>12 - Law Enforcement</fullName>
            </value>
            <value>
                <fullName>13 - Fire/Emergency Services</fullName>
            </value>
            <value>
                <fullName>14 - Emergency Operations Center</fullName>
            </value>
            <value>
                <fullName>15 - Homeland Security/Defense</fullName>
            </value>
            <value>
                <fullName>16 - Education/Library Services</fullName>
            </value>
            <value>
                <fullName>99 - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>