force-app/main/default/objects/Ticket__c/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description
  >A summary of the ticket and its updates, as generated by AI.</description>
    <inlineHelpText
  >A summary of the ticket and its updates, as generated by AI.</inlineHelpText>
    <label>AI Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>