force-app/main/default/objects/Ticket__c/fields/Amount_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Invoice__c</fullName>
    <label>Amount of Invoice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>