force-app/main/default/objects/Ticket__c/fields/Amount_Reallocating__c.field-meta.xml
<CustomField>
    <fullName>Amount_Reallocating__c</fullName>
    <label>Amount Reallocating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>