force-app/main/default/objects/Ticket__c/fields/Assignee_2__c.field-meta.xml
<CustomField>
    <fullName>Assignee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee (2)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets3</relationshipName>
    <type>Lookup</type>
</CustomField>