force-app/main/default/objects/Ticket__c/fields/Assignee_3__c.field-meta.xml
<CustomField>
    <fullName>Assignee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee (3)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets4</relationshipName>
    <type>Lookup</type>
</CustomField>