force-app/main/default/objects/Ticket__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who will work on this ticket.</description>
    <inlineHelpText
  >The developer/designer who will work on this ticket.</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>