force-app/main/default/objects/Ticket__c/fields/Assignee_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assignee_is_Current_User__c</fullName>
    <description
  >Displays &quot;1&quot; if the Assignee is equal to the Current User, otherwise &quot;0&quot;.</description>
    <formula>IF($User.Id = Assignee__r.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays &quot;1&quot; if the Assignee is equal to the Current User, otherwise &quot;0&quot;.</inlineHelpText>
    <label>Assignee is Current User</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>