force-app/main/default/objects/Ticket__c/fields/Audience_Filters__c.field-meta.xml
<CustomField>
    <fullName>Audience_Filters__c</fullName>
    <label>Audience Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>