force-app/main/default/objects/Ticket__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <description
  >Hidden field. Used in Audience Request Ticket Global Action to determine resulting ticket record type.</description>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>