force-app/main/default/objects/Ticket__c/fields/Backlog_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Status__c</fullName>
    <inlineHelpText
  >This is the Status of items that have been placed in the backlog. Only items marked as Shovel Ready are ready to be assigned</inlineHelpText>
    <label>Backlog Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shovel Ready</fullName>
            </value>
            <value>
                <fullName>Needs More info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>