force-app/main/default/objects/Ticket__c/fields/Billing_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Address__c</fullName>
    <description
  >The mailing address of the Billing Contact for this invoice.</description>
    <inlineHelpText
  >The mailing address of the Billing Contact for this invoice.</inlineHelpText>
    <label>Billing Contact Address</label>
    <type>TextArea</type>
</CustomField>