force-app/main/default/objects/Ticket__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description
  >Email address of the Billing Contact. This is where the invoice will be sent to.</description>
    <inlineHelpText
  >Email address of the Billing Contact. This is where the invoice will be sent to.</inlineHelpText>
    <label>Billing Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>