force-app/main/default/objects/Ticket__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <description>Name of the person the invoice will be sent to.</description>
    <inlineHelpText
  >Name of the person the invoice will be sent to.</inlineHelpText>
    <label>Billing Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>