force-app/main/default/objects/Ticket__c/fields/Billing_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Title__c</fullName>
    <description
  >The title of the person we are sending the invoice to.</description>
    <inlineHelpText
  >The title of the person we are sending the invoice to.</inlineHelpText>
    <label>Billing Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>