force-app/main/default/objects/Ticket__c/fields/Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Instructions__c</fullName>
    <description
  >Sales Admin Request Form Field - Billing Instructions for Opportunity Routing</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Billing Instructions for Opportunity Routing</inlineHelpText>
    <label>Billing Instructions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>