force-app/main/default/objects/Ticket__c/fields/Branch_of_Government__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Government__c</fullName>
    <label>Branch of Government</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Federal</fullName>
            </value>
            <value>
                <fullName>02 - State</fullName>
            </value>
            <value>
                <fullName>03 - County</fullName>
            </value>
            <value>
                <fullName>04 - Municipal</fullName>
            </value>
            <value>
                <fullName>05 - Special District</fullName>
            </value>
            <value>
                <fullName>06 - Government Association</fullName>
            </value>
            <value>
                <fullName>07 - Higher Education</fullName>
            </value>
            <value>
                <fullName>08 - K-12 Education</fullName>
            </value>
            <value>
                <fullName>09 - Private Sector</fullName>
            </value>
            <value>
                <fullName>99 - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>