force-app/main/default/objects/Ticket__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e.Republic Combined Audience</fullName>
                <default>true</default>
                <label>e.Republic Combined Audience</label>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>