force-app/main/default/objects/Ticket__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <description
  >Sales Admin Request Form Field - Opportunity Business Objective</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Opportunity Business Objective</inlineHelpText>
    <label>Business Objective</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>