force-app/main/default/objects/Ticket__c/fields/Campaign_1__c.field-meta.xml
<CustomField>
    <fullName>Campaign_1__c</fullName>
    <label>Campaign 1</label>
    <type>Date</type>
</CustomField>