force-app/main/default/objects/Ticket__c/fields/Campaign_2__c.field-meta.xml
<CustomField>
    <fullName>Campaign_2__c</fullName>
    <label>Campaign 2</label>
    <type>Date</type>
</CustomField>