force-app/main/default/objects/Ticket__c/fields/Campaign_3__c.field-meta.xml
<CustomField>
    <fullName>Campaign_3__c</fullName>
    <label>Campaign 3</label>
    <type>Date</type>
</CustomField>