force-app/main/default/objects/Ticket__c/fields/Campaign_Priority__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Priority__c</fullName>
    <description
  >Created for CommDev Ticket page layout. Ticket #75104</description>
    <formula>TEXT(Campaign__r.Priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Priority</label>
    <type>Text</type>
</CustomField>