force-app/main/default/objects/Ticket__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <description
  >Created for CommDev Ticket page layout. Ticket #75104</description>
    <formula>Campaign__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>