force-app/main/default/objects/Ticket__c/fields/Cards_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cards_Sent__c</fullName>
    <description>Actual number of gift cards sent.</description>
    <inlineHelpText>Actual number of gift cards sent.</inlineHelpText>
    <label>Cards Sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>