force-app/main/default/objects/Ticket__c/fields/Circulation_Dashboard_Campaign_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Dashboard_Campaign_Tracker__c</fullName>
    <formula
  >LPAD(Text(MONTH(Due_Date_Requested__c)),2,&apos;0&apos;)+&quot;/&quot; +LPAD(TEXT(DAY(Due_Date_Requested__c)),2,&apos;0&apos;)+&quot;/&quot; +LPAD(TEXT(YEAR(Due_Date_Requested__c)),4,&apos;0&apos;) &amp; &quot; - &quot; &amp;  Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circulation Dashboard Ticket Tracker</label>
    <type>Text</type>
</CustomField>