force-app/main/default/objects/Ticket__c/fields/Client_Custom_Opt_Out_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Custom_Opt_Out_Text__c</fullName>
    <formula>Event__r.Client_Custom_Opt_Out_Text__c</formula>
    <inlineHelpText
  >If this displays &quot;Required&quot;, go to the Account record and copy text from field &quot;Client Custom Opt-Out Text&quot;. This is a client&apos;s custom opt-out text they require us to put on our forms.</inlineHelpText>
    <label>Client Custom Opt-Out Text</label>
    <type>Text</type>
</CustomField>