force-app/main/default/objects/Ticket__c/fields/Client_POC_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Client_POC_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Sales Admin Request Form Field - Client POC for Opportunity</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Client POC for Opportunity</inlineHelpText>
    <label>Client POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets (Client POC)</relationshipLabel>
    <relationshipName>Tickets_w_Client_POC</relationshipName>
    <type>Lookup</type>
</CustomField>