force-app/main/default/objects/Ticket__c/fields/Contact_Pull_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pull_Contact_Count__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audience Estimate/Count</fullName>
                <label>Audience Estimate</label>
            </value>
            <value>
                <fullName>Audience List</fullName>
            </value>
            <value>
                <fullName>Bulk Import/Update</fullName>
            </value>
            <value>
                <fullName>Contact Merge</fullName>
            </value>
            <value>
                <fullName>Contact Verification</fullName>
            </value>
            <value>
                <fullName>Database Maintenance</fullName>
            </value>
            <value>
                <fullName>Email Deployment</fullName>
            </value>
            <value>
                <fullName>Get Contacts</fullName>
            </value>
            <value>
                <fullName>License/Vendor Management</fullName>
            </value>
            <value>
                <fullName>Privacy Compliance</fullName>
            </value>
            <value>
                <fullName>Registration Import/Update</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Email Deployment - Awards</fullName>
                <isActive>false</isActive>
                <label>Email Deployment - Awards</label>
            </value>
            <value>
                <fullName>Email Deployment - Custom Newsletter</fullName>
                <isActive>false</isActive>
                <label>Email Deployment - Custom Newsletter</label>
            </value>
            <value>
                <fullName>Email Deployment - Interview</fullName>
                <isActive>false</isActive>
                <label>Email Deployment - Interview</label>
            </value>
            <value>
                <fullName>Survey Deployment</fullName>
                <isActive>false</isActive>
                <label>Email Deployment - Survey</label>
            </value>
            <value>
                <fullName>Hoovers Update</fullName>
                <isActive>false</isActive>
                <label>Hoovers Update</label>
            </value>
            <value>
                <fullName>Import</fullName>
                <isActive>false</isActive>
                <label>Import</label>
            </value>
            <value>
                <fullName>Leads</fullName>
                <isActive>false</isActive>
                <label>Leads</label>
            </value>
            <value>
                <fullName>Trade Out List</fullName>
                <isActive>false</isActive>
                <label>Trade Out List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>