force-app/main/default/objects/Ticket__c/fields/Contact_Recency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Recency__c</fullName>
    <inlineHelpText
  >Selecting a 1 year recency will include contacts who are active magazine or newsletter subscribers, who were created within 1 year, whose job role was verified within 1 year, or who engaged with a webinar, event, paper, email, or are visited our website within 1 year. Selected 2 years will expand this recency criteria to 2 years.</inlineHelpText>
    <label>Contact Recency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>