force-app/main/default/objects/Ticket__c/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <label>Contact Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged Internal Contacts</fullName>
                <default>true</default>
                <label>Engaged Internal Contacts</label>
            </value>
            <value>
                <fullName>List Rental</fullName>
            </value>
            <value>
                <fullName>Industry Insider</fullName>
                <label>Members - Industry Insider</label>
            </value>
            <value>
                <fullName>Navigator Members</fullName>
                <label>Members - Navigator</label>
            </value>
            <value>
                <fullName>Navigator</fullName>
                <label>Verified Roles - Navigator</label>
            </value>
            <value>
                <fullName>Harvested</fullName>
                <label>Verified Roles - Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>