force-app/main/default/objects/Ticket__c/fields/Contract_Signer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer__c</fullName>
    <description
  >Sales Admin Request Form Field - Client Signing Opportunity Contract</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Client Signing Opportunity Contract</inlineHelpText>
    <label>Contract Signer</label>
    <type>TextArea</type>
</CustomField>