force-app/main/default/objects/Ticket__c/fields/Copy_List_Pull_Fields_from_Parent__c.field-meta.xml
<CustomField>
    <fullName>Copy_List_Pull_Fields_from_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Hidden field used by Clone List Pull Ticket action button to start Process Builder.</inlineHelpText>
    <label>Copy List Pull Fields from Parent</label>
    <type>Checkbox</type>
</CustomField>