force-app/main/default/objects/Ticket__c/fields/Create_Survey_Emails__c.field-meta.xml
<CustomField>
    <fullName>Create_Survey_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Field is used by process builder to automatically created survey campaigns on a new project.</description>
    <inlineHelpText
  >Field is used by process builder to automatically created survey campaigns on a new project.</inlineHelpText>
    <label>Create Survey Emails</label>
    <type>Checkbox</type>
</CustomField>