force-app/main/default/objects/Ticket__c/fields/Create_Survey_Results_Email__c.field-meta.xml
<CustomField>
    <fullName>Create_Survey_Results_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Survey Results Email</label>
    <type>Checkbox</type>
</CustomField>