force-app/main/default/objects/Ticket__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Originated</label>
    <type>Date</type>
</CustomField>