force-app/main/default/objects/Ticket__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>The date this ticket was closed.</description>
    <inlineHelpText>Date when this ticket was closed.</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>