force-app/main/default/objects/Ticket__c/fields/Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notes__c</fullName>
    <description
  >Sales Admin Request Form Field - Delivery Notes for Opportunity</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Delivery Notes for Opportunity</inlineHelpText>
    <label>Delivery Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>