force-app/main/default/objects/Ticket__c/fields/Delivery_POC__c.field-meta.xml
<CustomField>
    <fullName>Delivery_POC__c</fullName>
    <description
  >Sales Admin Request Form Field - Client Delivery POC for Opportunity</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Client Delivery POC for Opportunity</inlineHelpText>
    <label>Delivery POC</label>
    <type>TextArea</type>
</CustomField>