force-app/main/default/objects/Ticket__c/fields/Delivery_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Timeline__c</fullName>
    <description
  >Sales Admin Request Form Field - Opportunity Product(s) Delivery Timeline</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Opportunity Product(s) Delivery Timeline</inlineHelpText>
    <label>Delivery Timeline</label>
    <type>TextArea</type>
</CustomField>