force-app/main/default/objects/Ticket__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Sales Administrative Support</fullName>
            </value>
            <value>
                <fullName>Member Services</fullName>
            </value>
            <value>
                <fullName>Salesforce Operations</fullName>
            </value>
            <value>
                <fullName>People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Event Logistics &amp; Management</fullName>
            </value>
            <value>
                <fullName>Community Development</fullName>
            </value>
            <value>
                <fullName>Content Studio</fullName>
            </value>
            <value>
                <fullName>Demand Gen</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Design / Production</fullName>
            </value>
            <value>
                <fullName>Editorial</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Career Growth &amp; Development</fullName>
            </value>
            <value>
                <fullName>Navigator</fullName>
            </value>
            <value>
                <fullName>Audience Operations</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
                <isActive>false</isActive>
                <label>Customer Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>