force-app/main/default/objects/Ticket__c/fields/Dept_Next_Priority__c.field-meta.xml
<CustomField>
    <fullName>Dept_Next_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText
  >This is the Requester&apos;s Department next priority ticket</inlineHelpText>
    <label>Dept. Next Priority</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Tickets (Dept. Next Priority)</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>