force-app/main/default/objects/Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is a detailed description of the ticket.</description>
    <inlineHelpText>Detail description of the ticket.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>