force-app/main/default/objects/Ticket__c/fields/Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Developer_Notes__c</fullName>
    <description
  >Developer notes can only be viewed by the IT/Web Developer profile.</description>
    <label>Developer Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>