force-app/main/default/objects/Ticket__c/fields/Developer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Developer_Priority__c</fullName>
    <description>This is the priority order for projects</description>
    <inlineHelpText
  >The order in which projects will be worked on</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>