force-app/main/default/objects/Ticket__c/fields/Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amt__c</fullName>
    <description
  >The amount of the discount realized on the cost of the gift cards.</description>
    <inlineHelpText
  >The amount of the discount realized on the cost of the gift cards.</inlineHelpText>
    <label>Discount Amt</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>