force-app/main/default/objects/Ticket__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <description
  >Sales Admin Request Form Field - Opportunity Discounts</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Opportunity Discounts</inlineHelpText>
    <label>Discounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Discounts Included</fullName>
            </value>
            <value>
                <fullName>Discounts Included: Approval Attached</fullName>
            </value>
            <value>
                <fullName>Discounts Included: No Approval Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>