force-app/main/default/objects/Ticket__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <formula>Name &amp; &quot;: &quot; &amp; Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Title</label>
    <type>Text</type>
</CustomField>