force-app/main/default/objects/Ticket__c/fields/Distribute_To__c.field-meta.xml
<CustomField>
    <fullName>Distribute_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is the user the final list or count should be distributed to.</description>
    <inlineHelpText
  >This is the user the final list or count should be distributed to.</inlineHelpText>
    <label>Distribute To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets2</relationshipName>
    <type>Lookup</type>
</CustomField>