force-app/main/default/objects/Ticket__c/fields/Due_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Requested__c</fullName>
    <description>Date the request must be completed by.</description>
    <inlineHelpText
  >Must be completed by End of Business on this Date.</inlineHelpText>
    <label>Due Date Requested</label>
    <type>Date</type>
</CustomField>